add Font-family to header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="width=1024">
 		<link rel="stylesheet" href="Styles.css" type="text/css">
 		<title> Git Workout</title>
 	</head>
 <body>
 	<h1>Hello!</h1>
+<p>В данном списке перечислены шрифты, общие для всех актуальных на данный момент операционных систем Windows (фактически начиная с Windows 98), и их эквиваленты в Mac OS. Такие шрифты иногда называют «безопасными шрифтами для браузеров» (browser safe fonts). Это небольшой справочник, которым я пользуюсь, когда делаю Web-страницы и думаю, что он будет полезен и Вам.</p>
 </body>
 </html>
